<resources>
    <string name="app_name">Vertretungsplan</string>

    <string name="action_settings">Einstellungen</string>
    <string name="openDrawer">openDrawer</string>
    <string name="closeDrawer">closeDrawer</string>
    <string name="navigation_down">Created by WiNet</string>
    <string name="navigation_up">Vertretungsplan Wichern-Schule</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_general">Allgemein</string>
    <string name="pref_title_display_name">Klasse</string>
    <string name="pref_default_display_name">S1</string>
    <string name="pref_title_passwort">Passwort</string>
    <string name="pref_default_passwort" />
    <string name="notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">Benachrichtigungen aktivieren</string>
    <string name="pref_title_vibrate">Vibrieren</string>
    <string name="sync">Sync</string>
    <string name="pref_title_sync_frequency">Sync-zeit</string>
    <string name="GCMdefaultSenderId">669309765800</string>
    <string name="pref_debug_site">Debug-Feed nutzen (S2, S4, 5G1-3, 6G2-3)</string>
    <string name="debug">Debug</string>
    <string name="pref_debug_list">Tage ignorieren</string>


    <string-array name="pref_sync_frequency_titles">
    <item>3 minutes</item>
    <item>15 minutes</item>
    <item>30 minutes</item>
    <item>1 hour</item>
    <item>3 hours</item>
    <item>6 hours</item>
    <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
    <item>3</item>
    <item>15</item>
    <item>30</item>
    <item>60</item>
    <item>180</item>
    <item>360</item>
    <item>-1</item>
    </string-array>
    <string name="title_activity_setup">Setup</string>

    <string name="hello_world">Hello world!</string>
    <string name="pref_debug_servertoken">Servertoken gesendet</string>
    <string name="transition_detail">transition_detail</string>
    <string name="title_activity_news_detail">Nachrichten Detail</string>
    <string name="pref_donate">Spenden Button</string>
    <string name="action_mail">Kontakt</string>
    <string name="pref_title_profil">Profil</string>
    <string name="pref_title_profil_aktiv">Nach Profilen filtern</string>


    <string name="ok">OK</string>
    <string name="hello_blank_fragment"></string>
    <string name="dialog_hello_fragment">Alle Angaben ohne Gewähr!\nBei Fragen oder Anmerkungen:\nvertretungsplan@nkp-media.de\nWenn die Daten nicht stimmen, liegt es meistens nicht an der App. Bitte informiere mich dann über die oben gennante Mailadresse</string>
    <string name="server">Servereinstellungen</string>
    <string name="pref_server_domain">Serverdomain</string>
    <string name="pref_default_server_domain">winet-ag.ddns.net</string>
    <string name="pref_title_server_path">Server Path</string>
    <string name="pref_default_server_path">/blackboard/rss/</string>
    <string name="pref_title_randomDeviceId">Random Device Id</string>
    <string name="pref_title_gcmDeviceId">GCM ID</string>

</resources>
